[package]
name = "gll"
version = "0.0.3"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
repository = "https://github.com/lykenware/gll"
license = "MIT/Apache-2.0"
keywords = ["grammar", "generator", "GLL", "parser"]
readme = "README.md"
description = "GLL parsing framework."
edition = "2021"

[dependencies]
indexmap = "1"
grammer = "0"
proc-macro2 = "1"
quote = "1"

[build-dependencies]
indexmap = "1"
grammer = "0"
proc-macro2 = "1"
quote = "1"

[lib]
doctest = false
test = false

[workspace]
members = [
    "macros"
]

[patch.'crates-io']
grammer = { git = "https://github.com/frankhorv/grammer", rev = "ac93e578e68d219d54c569a5c6380037f4bcd714" }