[package]
name = "gll-macros"
version = "0.0.3"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
repository = "https://github.com/lykenware/gll"
license = "MIT/Apache-2.0"
description = "Macros used with the gll crate."
edition = "2018"

[dependencies.gll]
path = ".."
version = "0.0.3"

[dependencies]
quote = "1"

[lib]
doctest = false
proc-macro = true
